<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".module.klasemen.LeagueKlasement">


    <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/klasement_progressbar"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/klasement_team_name"
            android:id="@+id/title_team_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="144dp"
            android:orientation="vertical"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/klasement_played"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/klasement_played"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/title_team_name"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/title_team_name"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/klasement_goalfor"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/klasement_goals"
            app:layout_constraintTop_toTopOf="@id/klasement_played"
            app:layout_constraintStart_toEndOf="@id/klasement_played"
            app:layout_constraintBottom_toBottomOf="@id/klasement_played"
    />



    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/klasement_win"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/klasement_win"
            app:layout_constraintTop_toTopOf="@id/klasement_goalfor"
            app:layout_constraintStart_toEndOf="@id/klasement_goalfor"
            app:layout_constraintBottom_toBottomOf="@id/klasement_goalfor"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/klasement_draw"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/klasement_draw"
            app:layout_constraintTop_toTopOf="@id/klasement_win"
            app:layout_constraintStart_toEndOf="@id/klasement_win"
            app:layout_constraintBottom_toBottomOf="@id/klasement_win"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/klasement_loss"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/klasement_loss"
            app:layout_constraintTop_toTopOf="@id/klasement_draw"
            app:layout_constraintStart_toEndOf="@id/klasement_draw"
            app:layout_constraintBottom_toBottomOf="@id/klasement_draw"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/klasement_total"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/klasement_total"
            app:layout_constraintTop_toTopOf="@id/klasement_loss"
            app:layout_constraintStart_toEndOf="@id/klasement_loss"
            app:layout_constraintBottom_toBottomOf="@id/klasement_loss"
    />



    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:id="@+id/klasement_swipe"
            app:layout_constraintTop_toBottomOf="@id/title_team_name"
            app:layout_constraintBottom_toBottomOf="parent"

    >

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/klasement_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>